--- a/PillPall/Views/DrugItemPage.xaml
+++ b/PillPall/Views/DrugItemPage.xaml
@@ -14,8 +14,85 @@
             <Label Text="Name" />
             <Entry Text="{Binding Name}" />
             <Label Text="Type" />
-            <Entry Text="{Binding Type}" />
-            <!--<Label Text="Done" />
+            <VerticalStackLayout
+                RadioButtonGroup.GroupName="DrugType"
+                RadioButtonGroup.SelectedValue="{Binding Type}">
+                    <RadioButton Value="Tablets and Capsules" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Tablets and Capsules"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Syrup" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Syrup"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Injections" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Injections"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Nasal Spray" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Nasal Spray"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Inhalers" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Inhalers"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Suppositories" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Suppositories"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Eye Drops" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Eye Drops"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Ear Drops" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Ear Drops"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton Value="Lozenges" GroupName="DrugType">
+                        <RadioButton.Content>
+                            <HorizontalStackLayout Padding="5,0,0,0" VerticalOptions="Center">
+                                <Label FontSize="{StaticResource ParagraphFontSize}"
+                                       Text="Lozenges"/>
+                            </HorizontalStackLayout>
+                        </RadioButton.Content>
+                    </RadioButton>
+            </VerticalStackLayout>
+            <!--<Label Text="Dosage" />
+            <Entry Text="{Binding Dosage}" />
+            <Label Text="Done for today" />
             <Switch IsToggled="{Binding Done}" />-->
             <Button Text="Save"
                     Clicked="OnSaveClicked" />
