started working on datetime stuff, but addition of choosing drug is hard

--- a/PillPall/AppShell.xaml
+++ b/PillPall/AppShell.xaml
@@ -71,6 +71,11 @@
             ContentTemplate="{DataTemplate views:DrugListPage}"
             Route="DrugList"
             Icon="add.png" />
+        <ShellContent
+            Title="Dates"
+            ContentTemplate="{DataTemplate views:DateListPage}"
+            Route="DateList"
+            Icon="notes.png" />
     </FlyoutItem>
 
 </Shell>
