--- a/PillPall/Views/DateListPage.xaml
+++ b/PillPall/Views/DateListPage.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:PillPall.Models"
-             x:Class="PillPall.Views.DrugListPage"
+             x:Class="PillPall.Views.DateListPage"
              xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
              xmlns:views="clr-namespace:PillPall.Views"
-             x:DataType="views:DrugListPage"
+             x:DataType="views:DateListPage"
              ios:Page.UseSafeArea="True"
              BackgroundColor="{StaticResource Primary}">
     <Grid RowDefinitions="*,Auto">
@@ -15,9 +15,9 @@
                   SelectionMode="Single"
                   SelectionChanged="CollectionView_SelectionChanged">
             <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="models:DrugItem">
+                <DataTemplate x:DataType="models:DateItem">
                         <Grid ColumnDefinitions="*, Auto" Padding="20">
-                            <Label Text="{Binding Name}"
+                            <Label Text="{Binding DayOfWeek}"
                                    VerticalTextAlignment="Center"
                                    FontSize="{StaticResource ParagraphFontSize}"/>
                         </Grid>
