--- a/PillPall/AppShell.xaml
+++ b/PillPall/AppShell.xaml
@@ -73,7 +73,7 @@
             Icon="add.png" />
         <ShellContent
             Title="Dates"
-            ContentTemplate="{DataTemplate views:DateListPage}"
+            ContentTemplate="{DataTemplate views:DrugDateEntryPage}"
             Route="DateList"
             Icon="notes.png" />
     </FlyoutItem>
