--- a/PillPall/Views/DrugListPage.xaml
+++ b/PillPall/Views/DrugListPage.xaml
@@ -16,11 +16,10 @@
                   SelectionChanged="CollectionView_SelectionChanged">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="models:DrugItem">
-                        <Grid ColumnDefinitions="*, Auto" Padding="20">
-                            <Label Text="{Binding Name}"
-                                   VerticalTextAlignment="Center"
-                                   FontSize="{StaticResource ParagraphFontSize}"/>
-                        </Grid>
+                    <HorizontalStackLayout Padding="20">
+                        <Label Text="{Binding ID, StringFormat='{0}.'}"/>
+                        <Label Text="{Binding Name}" VerticalTextAlignment="Center"/>
+                    </HorizontalStackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
