--- a/PillPall/Views/MainPage.xaml
+++ b/PillPall/Views/MainPage.xaml
@@ -1,13 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:customcontrol="clr-namespace:PillPall.CustomControl"
              x:Class="PillPall.Views.MainPage"
              BackgroundColor="{StaticResource Primary}">
-    <VerticalStackLayout>
+    <VerticalStackLayout
+        Spacing="25"
+        Padding="30,0"
+        VerticalOptions="StartAndExpand">
         <Label 
             Text="PillPall"
             VerticalOptions="Center" 
             HorizontalOptions="Center"
             FontSize="{StaticResource HeaderFontSize}"/>
+
+        <customcontrol:CalendarView x:Name="cal" OnDateSelected="cal_OnDateSelected"/>
+
     </VerticalStackLayout>
 </ContentPage>
